kubernetes/clusterip-definition.yml
# REQUIRED
apiVersion: v1

# REQUIRED  
kind: Service

# REQUIRED
metadata: 
  name: myapp
  labels:
    app: myapp

# Anything defined in the spec must be maintained at all times by the Control Plane
# REQUIRED
spec:
  selector:
    app: myapp
  type: ClusterIP
  ports:
    - name: http
      targetPort: 80
      port: 80
      protocol: TCP
