kubernetes/load_balancer-definition.yml
# REQUIRED
apiVersion: v1

# REQUIRED  
kind: Service

# REQUIRED
metadata: 
  name: myapp
  labels:
    app: myapp

# Anything defined in the spec must be maintained at all times by the Control Plane
# REQUIRED
spec:
  selector:
    app: myapp
  type: LoadBalancer
  ports:
    - protocol: TCP
      targetPort: 80
      port: 80
  clusterIP: 10.0.171.239

# REQUIRED
status:
  loadBalancer:
    ingress:
      - ip: 192.0.2.127
