kubernetes/network_policy-definition.yml
# REQUIRED
apiVersion: networking.k8s.io/v1

# REQUIRED  
kind: NetworkPolicy

# REQUIRED
metadata:
  name: standard
  namespace: default

# REQUIRED
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - ipBlock:
        cidr: 172.17.0.0/16
        except:
          - 172.17.1.0/24
      - namespaceSelector:
        matchLabels:
          project: myproject
      - podSelector: #namespaceSelector
        matchLabels:
         role: frontend
      ports:
        - protocol: TCP
          port: 6379
  egress:
    - to:
      - ipBlock:
        cidr:
          10.0.0.0/24
      ports:
        - protocol: TCP
          port: 5978
